# cmake-en-papillote

./: LICENSE  README.md
config/: CMakeLists.txt  config.py
config/core/: check_external_timestamp.py  config_info.cmake  config_info.py.in  git_info.cmake  glob_cmake_sources.py  safe_guards.cmake  update_compiler_flags.py
config/math/: ConfigMathLibs.cmake  MathLibsDefinitions.cmake  MathLibsFunctions.cmake
example/: CMakeLists.txt  setup.py
example/compilers/: Clang.cfg  GNU.cfg  Intel.cfg  PGI.cfg  XL.cfg
example/local/pre_build/: omp.cmake  paths.cmake  project.cmake
